230 double calls to api should not crash backend (#327)
* re add strict mode

* Fixes

* Fix warnings

* lint

---------

Co-authored-by: Salma Baig <76014459+hydrowoxy@users.noreply.github.com>